# spotify-to-apple-music

./: Cargo.toml
src/: main.rs
src/spotify/: mod.rs  spotify_auth.rs  spotify_callback.rs  spotify_error.rs  spotify_scope.rs  util.rs
