[package]
name = "spotify_to_apple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
snafu = "0.7.5"
strum = "0.25.0"
strum_macros = "0.25.0"
serde = { version = "1.0.186", features = ["derive"] }
rand = "0.7"
url = "2.4.0"
open = "5.0.0"